All changes to coincide with Video 24 - Message Serialization

--- a/MultiplayerGameFramework/MGF-Photon4/MGF-Photon4.csproj
+++ b/MultiplayerGameFramework/MGF-Photon4/MGF-Photon4.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\Photon4\Photon-OnPremise-Server-SDK_v4-0-29-11263\deploy\TestServer\bin\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
