Video 25 - Setting up and registering our first sub server.

--- a/MultiplayerGameFramework/GameCommon/GameCommon.csproj
+++ b/MultiplayerGameFramework/GameCommon/GameCommon.csproj
@@ -51,6 +51,7 @@
     <Compile Include="MessageSerializerService.cs" />
     <Compile Include="MessageSubCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
