--- a/MultiplayerGameFramework/MGF-Photon4/app.config
+++ b/MultiplayerGameFramework/MGF-Photon4/app.config
@@ -20,4 +20,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
+  <connectionStrings>
+    <add name="MySqlDbConnectionString" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=mgf;uid=mgfuser;password=mgfuser" />
+    <add name="MsSqlDbConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MGF;Integrated Security=true" />
+  </connectionStrings>
+</configuration>
