--- a/MultiplayerGameFramework/MGF.DataEntities/App.config
+++ b/MultiplayerGameFramework/MGF.DataEntities/App.config
@@ -6,7 +6,7 @@
   
   
   <connectionStrings>
-    <add name="MySqlDbConnectionString" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=mgf;uid=root;password=" />
+    <add name="MySqlDbConnectionString" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=mgf;uid=mgfuser;password=mgfuser" />
     <add name="MsSqlDbConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MGF;Integrated Security=true" />
   </connectionStrings>
 
@@ -14,17 +14,17 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.10.5.0" newVersion="6.10.5.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.9.11.0" newVersion="6.9.11.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<entityFramework>
-    <providers>
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
-    </providers>
-  </entityFramework><system.data>
+<system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data><entityFramework>
+    <providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+    </providers>
+  </entityFramework></configuration>
