--- a/MultiplayerGameFramework/MGF.Domain/App.config
+++ b/MultiplayerGameFramework/MGF.Domain/App.config
@@ -15,14 +15,14 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MySqlDbConnectionString" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=mgf;uid=root;password=" />
+    <add name="MySqlDbConnectionString" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=mgfuser;uid=mgf;password=mgfuser" />
     <add name="MsSqlDbConnectionString" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MGF;Integrated Security=true" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.10.5.0" newVersion="6.10.5.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.9.11.0" newVersion="6.9.11.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
