Video 30 - Listing Characters and Intercepting Messages

--- a/MultiplayerGameFramework/GameCommon/GameCommon.csproj
+++ b/MultiplayerGameFramework/GameCommon/GameCommon.csproj
@@ -52,6 +52,7 @@
     <Compile Include="MessageSubCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReturnCode.cs" />
+    <Compile Include="SerializedObjects\Character.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
