--- a/MGF Client/MGF Client.csproj
+++ b/MGF Client/MGF Client.csproj
@@ -12,16 +12,13 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <TargetFrameworkProfile></TargetFrameworkProfile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectGenerator>VSTU</UnityProjectGenerator>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>2017.4.0f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
@@ -284,6 +281,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ClientHandlers\AccountCreationHandler.cs" />
+    <Compile Include="Assets\ClientHandlers\GameMessageHandler.cs" />
     <Compile Include="Assets\ClientHandlers\ListCharacterHandler.cs" />
     <Compile Include="Assets\ClientHandlers\LoginUserHandler.cs" />
     <Compile Include="Assets\ClientHandlers\TestHandler.cs" />
@@ -296,7 +294,7 @@
     <Compile Include="Assets\MGFClient\Message\Interfaces\IMessageHandler.cs" />
     <Compile Include="Assets\MGFClient\Message\MessageType.cs" />
     <Compile Include="Assets\MGFClient\PhotonEngine.cs" />
-    <Compile Include="Assets\Scriptable Objects\TestScriptable.cs" />
+    <Compile Include="Assets\Scriptable Objects\GameMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
