Update for Video 33 - Character Create UI and code.

--- a/MGF Client/MGF Client.csproj
+++ b/MGF Client/MGF Client.csproj
@@ -283,6 +283,7 @@
     <Compile Include="Assets\CharacterSlot.cs" />
     <Compile Include="Assets\CharacterSlotController.cs" />
     <Compile Include="Assets\ClientHandlers\AccountCreationHandler.cs" />
+    <Compile Include="Assets\ClientHandlers\CharacterCreateResponseHandler.cs" />
     <Compile Include="Assets\ClientHandlers\GameMessageHandler.cs" />
     <Compile Include="Assets\ClientHandlers\ListCharacterHandler.cs" />
     <Compile Include="Assets\ClientHandlers\LoginUserHandler.cs" />
